Fix overflow problem on Firefox
[finishes #93463802]

--- a/app/assets/stylesheets/DocumentSet/show/document-list-title.less
+++ b/app/assets/stylesheets/DocumentSet/show/document-list-title.less
@@ -10,6 +10,7 @@
   font-family: @font-family-sans-serif;
   font-weight: normal;
   font-size: 1.25em;
+  overflow: hidden;
 
   h4 {
     .flex(1 1 auto);
